--- a/src/Meshellator.Silverlight/Meshellator.Silverlight.csproj
+++ b/src/Meshellator.Silverlight/Meshellator.Silverlight.csproj
@@ -77,173 +77,89 @@
     <Compile Include="..\Meshellator\ILogger.cs">
       <Link>ILogger.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\Autodesk3dsImporter.cs">
-      <Link>Importers\Autodesk3ds\Autodesk3dsImporter.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\Autodesk3dsImporter.cs">
+      <Link>Importers\3ds\Autodesk3dsImporter.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\Camera3ds.cs">
-      <Link>Importers\Autodesk3ds\Camera3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\Camera3ds.cs">
+      <Link>Importers\3ds\Camera3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\Color3ds.cs">
-      <Link>Importers\Autodesk3ds\Color3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\Color3ds.cs">
+      <Link>Importers\3ds\Color3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\Decode3ds.cs">
-      <Link>Importers\Autodesk3ds\Decode3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\Decode3ds.cs">
+      <Link>Importers\3ds\Decode3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\Exception3ds.cs">
-      <Link>Importers\Autodesk3ds\Exception3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\Exception3ds.cs">
+      <Link>Importers\3ds\Exception3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\Face3ds.cs">
-      <Link>Importers\Autodesk3ds\Face3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\Face3ds.cs">
+      <Link>Importers\3ds\Face3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\FaceMat3ds.cs">
-      <Link>Importers\Autodesk3ds\FaceMat3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\FaceMat3ds.cs">
+      <Link>Importers\3ds\FaceMat3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\HideKey3ds.cs">
-      <Link>Importers\Autodesk3ds\HideKey3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\HideKey3ds.cs">
+      <Link>Importers\3ds\HideKey3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\HideTrack3ds.cs">
-      <Link>Importers\Autodesk3ds\HideTrack3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\HideTrack3ds.cs">
+      <Link>Importers\3ds\HideTrack3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\Light3ds.cs">
-      <Link>Importers\Autodesk3ds\Light3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\Light3ds.cs">
+      <Link>Importers\3ds\Light3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\Material3ds.cs">
-      <Link>Importers\Autodesk3ds\Material3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\Material3ds.cs">
+      <Link>Importers\3ds\Material3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\Mesh3ds.cs">
-      <Link>Importers\Autodesk3ds\Mesh3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\Mesh3ds.cs">
+      <Link>Importers\3ds\Mesh3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\MorphKey3ds.cs">
-      <Link>Importers\Autodesk3ds\MorphKey3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\MorphKey3ds.cs">
+      <Link>Importers\3ds\MorphKey3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\MorphTrack3ds.cs">
-      <Link>Importers\Autodesk3ds\MorphTrack3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\MorphTrack3ds.cs">
+      <Link>Importers\3ds\MorphTrack3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\PKey3ds.cs">
-      <Link>Importers\Autodesk3ds\PKey3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\PKey3ds.cs">
+      <Link>Importers\3ds\PKey3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\PTrack3ds.cs">
-      <Link>Importers\Autodesk3ds\PTrack3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\PTrack3ds.cs">
+      <Link>Importers\3ds\PTrack3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\RotationKey3ds.cs">
-      <Link>Importers\Autodesk3ds\RotationKey3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\RotationKey3ds.cs">
+      <Link>Importers\3ds\RotationKey3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\RotationTrack3ds.cs">
-      <Link>Importers\Autodesk3ds\RotationTrack3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\RotationTrack3ds.cs">
+      <Link>Importers\3ds\RotationTrack3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\Scene3ds.cs">
-      <Link>Importers\Autodesk3ds\Scene3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\Scene3ds.cs">
+      <Link>Importers\3ds\Scene3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\SplineKey3ds.cs">
-      <Link>Importers\Autodesk3ds\SplineKey3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\SplineKey3ds.cs">
+      <Link>Importers\3ds\SplineKey3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\TexCoords3ds.cs">
-      <Link>Importers\Autodesk3ds\TexCoords3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\TexCoords3ds.cs">
+      <Link>Importers\3ds\TexCoords3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\TextDecode3ds.cs">
-      <Link>Importers\Autodesk3ds\TextDecode3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\TextDecode3ds.cs">
+      <Link>Importers\3ds\TextDecode3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\TextureMappingMode3ds.cs">
-      <Link>Importers\Autodesk3ds\TextureMappingMode3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\TextureMappingMode3ds.cs">
+      <Link>Importers\3ds\TextureMappingMode3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\Track3ds.cs">
-      <Link>Importers\Autodesk3ds\Track3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\Track3ds.cs">
+      <Link>Importers\3ds\Track3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\Utils3ds.cs">
-      <Link>Importers\Autodesk3ds\Utils3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\Utils3ds.cs">
+      <Link>Importers\3ds\Utils3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\Vertex3ds.cs">
-      <Link>Importers\Autodesk3ds\Vertex3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\Vertex3ds.cs">
+      <Link>Importers\3ds\Vertex3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\XYZKey3ds.cs">
-      <Link>Importers\Autodesk3ds\XYZKey3ds.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\XYZKey3ds.cs">
+      <Link>Importers\3ds\XYZKey3ds.cs</Link>
     </Compile>
-    <Compile Include="..\Meshellator\Importers\Autodesk3ds\XYZTrack3ds.cs">
-      <Link>Importers\Autodesk3ds\XYZTrack3ds.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\LightwaveObjImporter.cs">
-      <Link>Importers\LightwaveObj\LightwaveObjImporter.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Face.cs">
-      <Link>Importers\LightwaveObj\Objects\Face.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\FaceType.cs">
-      <Link>Importers\LightwaveObj\Objects\FaceType.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Group.cs">
-      <Link>Importers\LightwaveObj\Objects\Group.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Material.cs">
-      <Link>Importers\LightwaveObj\Objects\Material.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\CommentParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\CommentParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\DefaultParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\DefaultParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\LineParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\LineParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\LineParserFactory.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\LineParserFactory.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\Mtl\KaParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\Mtl\KaParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\Mtl\KdMapParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\Mtl\KdMapParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\Mtl\KdParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\Mtl\KdParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\Mtl\KsParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\Mtl\KsParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\Mtl\MaterialFileParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\Mtl\MaterialFileParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\Mtl\MaterialParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\Mtl\MaterialParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\Mtl\MtlLineParserFactory.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\Mtl\MtlLineParserFactory.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\Mtl\NsParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\Mtl\NsParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\NormalParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\NormalParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\Obj\FaceParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\Obj\FaceParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\Obj\FreeFormParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\Obj\FreeFormParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\Obj\GroupParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\Obj\GroupParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\Obj\MaterialParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\Obj\MaterialParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\Obj\ObjLineParserFactory.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\Obj\ObjLineParserFactory.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\Obj\TextureCoordinateParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\Obj\TextureCoordinateParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Parsers\Obj\VertexParser.cs">
-      <Link>Importers\LightwaveObj\Objects\Parsers\Obj\VertexParser.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\TextureCoordinate.cs">
-      <Link>Importers\LightwaveObj\Objects\TextureCoordinate.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\Vertex.cs">
-      <Link>Importers\LightwaveObj\Objects\Vertex.cs</Link>
-    </Compile>
-    <Compile Include="..\Meshellator\Importers\LightwaveObj\Objects\WavefrontObject.cs">
-      <Link>Importers\LightwaveObj\Objects\WavefrontObject.cs</Link>
+    <Compile Include="..\Meshellator\Importers\3ds\XYZTrack3ds.cs">
+      <Link>Importers\3ds\XYZTrack3ds.cs</Link>
     </Compile>
     <Compile Include="..\Meshellator\Importers\Nff\NffImporter.cs">
       <Link>Importers\Nff\NffImporter.cs</Link>
@@ -289,6 +205,90 @@
     </Compile>
     <Compile Include="..\Meshellator\Importers\Nff\Parsers\TorusParser.cs">
       <Link>Importers\Nff\Parsers\TorusParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Face.cs">
+      <Link>Importers\Obj\Objects\Face.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\FaceType.cs">
+      <Link>Importers\Obj\Objects\FaceType.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Group.cs">
+      <Link>Importers\Obj\Objects\Group.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Material.cs">
+      <Link>Importers\Obj\Objects\Material.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\CommentParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\CommentParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\DefaultParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\DefaultParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\LineParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\LineParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\LineParserFactory.cs">
+      <Link>Importers\Obj\Objects\Parsers\LineParserFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\Mtl\KaParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\Mtl\KaParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\Mtl\KdMapParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\Mtl\KdMapParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\Mtl\KdParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\Mtl\KdParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\Mtl\KsParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\Mtl\KsParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\Mtl\MaterialFileParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\Mtl\MaterialFileParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\Mtl\MaterialParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\Mtl\MaterialParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\Mtl\MtlLineParserFactory.cs">
+      <Link>Importers\Obj\Objects\Parsers\Mtl\MtlLineParserFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\Mtl\NsParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\Mtl\NsParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\NormalParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\NormalParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\Obj\FaceParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\Obj\FaceParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\Obj\FreeFormParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\Obj\FreeFormParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\Obj\GroupParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\Obj\GroupParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\Obj\MaterialParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\Obj\MaterialParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\Obj\ObjLineParserFactory.cs">
+      <Link>Importers\Obj\Objects\Parsers\Obj\ObjLineParserFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\Obj\TextureCoordinateParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\Obj\TextureCoordinateParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Parsers\Obj\VertexParser.cs">
+      <Link>Importers\Obj\Objects\Parsers\Obj\VertexParser.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\TextureCoordinate.cs">
+      <Link>Importers\Obj\Objects\TextureCoordinate.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\Vertex.cs">
+      <Link>Importers\Obj\Objects\Vertex.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\Objects\WavefrontObject.cs">
+      <Link>Importers\Obj\Objects\WavefrontObject.cs</Link>
+    </Compile>
+    <Compile Include="..\Meshellator\Importers\Obj\ObjImporter.cs">
+      <Link>Importers\Obj\ObjImporter.cs</Link>
     </Compile>
     <Compile Include="..\Meshellator\Material.cs">
       <Link>Material.cs</Link>
@@ -342,11 +342,11 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="..\Meshellator\Importers\Autodesk3ds\Licence.txt">
-      <Link>Importers\Autodesk3ds\Licence.txt</Link>
+    <Content Include="..\Meshellator\Importers\3ds\Licence.txt">
+      <Link>Importers\3ds\Licence.txt</Link>
     </Content>
-    <Content Include="..\Meshellator\Importers\LightwaveObj\Licence.txt">
-      <Link>Importers\LightwaveObj\Licence.txt</Link>
+    <Content Include="..\Meshellator\Importers\Obj\Licence.txt">
+      <Link>Importers\Obj\Licence.txt</Link>
     </Content>
   </ItemGroup>
   <ItemGroup>
